syntax = "proto3";

package stat;

service Stat {
  rpc CPUQuery (StatRequest) returns (CPUReply);
}

message StatRequest {
  string metric=1;
  string discriminator=2;
  string filter_datacenter=3;
  string filter_host=4;
  string filter_container_id=5;
  string filter_container_name=6;
  string filter_container_image=7;
  string filter_service_id=8;
  string filter_service_name=9;
  string filter_task_id=10;
  string filter_task_name=11;
  string filter_node_id=12;
  string since=13;
  string until=14;
  string period=15;
  string time_unit=16;
}

message CPUEntry {
  //Common data
  int64 time=1;
  string datacenter=2;
  string host=3;
  string container_id=4;
  string container_name=5;
  string container_image=6;
  string service_id=7;
  string service_name=8;
  string task_id=9;
  string task_name=10;
  string node_id=11;
  //CPU Dedicated data
  string usage_system=12;
  string usage_kernel=13;
  string usage_user=14;
  string usage_total=15;
}

message CPUReply {
  repeated CPUEntry entries = 1;
}


